--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="16dp">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Name: "
         android:textSize="18dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"
         />
@@ -20,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"
         android:text="Email/Phone: " />
@@ -30,6 +33,7 @@
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_marginBottom="8dp"
         android:text="Preferences: " />
 
@@ -38,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
+        android:textColor="@color/black"
         android:layout_marginBottom="8dp"
         android:textStyle="bold"
         android:text="Education: " />
@@ -47,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"
         android:text="CGPA: " />
